--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="markdown-to-bbcode.js"></script>
   </head>
   <body>
-      <textarea id="markdown" rows="30" cols="250" name="text" placeholder="Enter text"></textarea>
-      <textarea id="bbcode" rows="30" cols="250" name="text" placeholder="Enter text"></textarea>
+      <textarea id="markdown" rows="30" cols="250" name="text" placeholder="Enter Markdown" onchange="render()"></textarea>
+      <textarea id="bbcode" rows="30" cols="250" name="text" placeholder=""></textarea>
   </body>
   <script type="text/javascript" src="index.js"></script>
 </html>
