--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <script type="text/javascript" src="markdown-to-bbcode.js"></script>
   </head>
   <body>
-      <textarea id="markdown" rows="30" cols="250" name="text" placeholder="Enter Markdown" onchange="render()"></textarea>
-      <textarea id="bbcode" rows="30" cols="250" name="text" placeholder=""></textarea>
+<div class="flex-container max-width max-height">
+      <textarea class="half-width max-height" id="markdown" name="text" placeholder="Enter Markdown" onchange="render()"></textarea>
+      <textarea class="half-width max-height" id="bbcode" name="text" placeholder=""></textarea>
+</div>
   </body>
   <script type="text/javascript" src="index.js"></script>
 </html>
